// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldTextArea disabled  with label inline 1`] = `
.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c7 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  background: #F5F6F7;
  color: #939BA5;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 textarea:hover {
  border-color: #DEE1E5;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c6 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c6 .c5 {
  grid-area: messages;
}

.c6 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c5 {
  grid-area: messages;
}

.c0 .c8 {
  width: 13rem;
}

.c0 .c9 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c11 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c10 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea
        disabled={true}
      />
    </div>
  </div>
  <div
    className="c5 "
  />
</div>
`;

exports[`A FieldTextArea disabled with default label 1`] = `
.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c7 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  background: #F5F6F7;
  color: #939BA5;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 textarea:hover {
  border-color: #DEE1E5;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c5 {
  grid-area: messages;
}

.c0 .c8 {
  width: 13rem;
}

.c0 .c9 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c11 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c10 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c6 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c6 .c5 {
  grid-area: messages;
}

.c6 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea
        disabled={true}
      />
    </div>
  </div>
  <div
    className="c5 "
  />
</div>
`;

exports[`A FieldTextArea required  with label inline 1`] = `
.c5 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 .c8 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c5 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c5 textarea:hover {
  border-color: #C1C6CC;
}

.c5 textarea:focus,
.c5 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c3 {
  color: #CC1F36;
}

.c7 .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c7 .c6 {
  grid-area: messages;
}

.c7 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c6 {
  grid-area: messages;
}

.c0 .c9 {
  width: 13rem;
}

.c0 .c10 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c11 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    👍
    <span
      aria-hidden="true"
      className="c3"
    >
       
      *
    </span>
  </label>
  <div
    className="c4 "
  >
    <div
      className="c5 "
    >
      <textarea
        required={true}
      />
    </div>
  </div>
  <div
    className="c6 "
  />
</div>
`;

exports[`A FieldTextArea required with default label 1`] = `
.c5 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 .c8 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c5 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c5 textarea:hover {
  border-color: #C1C6CC;
}

.c5 textarea:focus,
.c5 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c3 {
  color: #CC1F36;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c6 {
  grid-area: messages;
}

.c0 .c9 {
  width: 13rem;
}

.c0 .c10 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c11 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c7 .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c7 .c6 {
  grid-area: messages;
}

.c7 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    👍
    <span
      aria-hidden="true"
      className="c3"
    >
       
      *
    </span>
  </label>
  <div
    className="c4 "
  >
    <div
      className="c5 "
    >
      <textarea
        required={true}
      />
    </div>
  </div>
  <div
    className="c6 "
  />
</div>
`;

exports[`A FieldTextArea with default label 1`] = `
.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c5 {
  grid-area: messages;
}

.c0 .c7 {
  width: 13rem;
}

.c0 .c8 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c10 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c9 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea />
    </div>
  </div>
  <div
    className="c5 "
  />
</div>
`;

exports[`A FieldTextArea with description and with default label 1`] = `
.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c8 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  font-size: 0.75rem;
  line-height: 1rem;
  margin-top: 0.5rem;
  color: #707781;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c5 {
  grid-area: messages;
}

.c0 .c9 {
  width: 13rem;
}

.c0 .c10 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c11 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c7 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c7 .c5 {
  grid-area: messages;
}

.c7 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    Text Input
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea
        placeholder="placeholder"
      />
    </div>
  </div>
  <div
    className="c5 "
  >
    <p
      className="c6"
      color="palette.charcoal500"
      fontSize="xsmall"
    >
      no vegetables allowed
    </p>
  </div>
</div>
`;

exports[`A FieldTextArea with description and with label inline 1`] = `
.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c8 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 {
  font-size: 0.75rem;
  line-height: 1rem;
  margin-top: 0.5rem;
  color: #707781;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c7 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c7 .c5 {
  grid-area: messages;
}

.c7 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c5 {
  grid-area: messages;
}

.c0 .c9 {
  width: 13rem;
}

.c0 .c10 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c12 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c11 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    Text Input
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea
        placeholder="placeholder"
      />
    </div>
  </div>
  <div
    className="c5 "
  >
    <p
      className="c6"
      color="palette.charcoal500"
      fontSize="xsmall"
    >
      no vegetables allowed
    </p>
  </div>
</div>
`;

exports[`A FieldTextArea with detail and  with label inline 1`] = `
.c6 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c6 .c9 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c6 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c6 textarea:hover {
  border-color: #C1C6CC;
}

.c6 textarea:focus,
.c6 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c4 {
  font-size: 0.75rem;
  line-height: 1rem;
}

.c8 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c8 .c7 {
  grid-area: messages;
}

.c8 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c8 .c3 {
  grid-area: detail;
  justify-self: end;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c10 {
  width: 13rem;
}

.c0 .c11 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c3 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c12 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    hello
  </label>
  <span
    className="c3 c4"
    fontSize="xsmall"
  >
    5/50
  </span>
  <div
    className="c5 "
  >
    <div
      className="c6 "
    >
      <textarea
        placeholder="placeholder"
      />
    </div>
  </div>
  <div
    className="c7 "
  />
</div>
`;

exports[`A FieldTextArea with detail and with default label 1`] = `
.c6 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c6 .c9 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c6 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c6 textarea:hover {
  border-color: #C1C6CC;
}

.c6 textarea:focus,
.c6 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c4 {
  font-size: 0.75rem;
  line-height: 1rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c10 {
  width: 13rem;
}

.c0 .c11 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c3 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c12 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c8 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c8 .c7 {
  grid-area: messages;
}

.c8 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c8 .c3 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    hello
  </label>
  <span
    className="c3 c4"
    fontSize="xsmall"
  >
    5/50
  </span>
  <div
    className="c5 "
  >
    <div
      className="c6 "
    >
      <textarea
        placeholder="placeholder"
      />
    </div>
  </div>
  <div
    className="c7 "
  />
</div>
`;

exports[`A FieldTextArea with label inline 1`] = `
.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c7 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c6 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c6 .c5 {
  grid-area: messages;
}

.c6 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c5 {
  grid-area: messages;
}

.c0 .c8 {
  width: 13rem;
}

.c0 .c9 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c11 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c10 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea />
    </div>
  </div>
  <div
    className="c5 "
  />
</div>
`;

exports[`A FieldTextArea with validationMessage and  with label inline 1`] = `
.c5 {
  color: #CC1F36;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c11 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  border-color: #ED3B53;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 textarea:hover {
  border-color: #CC1F36;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c9 {
  font-size: 0.75rem;
  color: #CC1F36;
}

.c12 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c12 .c7 {
  grid-area: messages;
}

.c12 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c12 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c13 {
  width: 13rem;
}

.c0 .c14 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c0 .c15 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    hello
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea
        placeholder="placeholder"
      />
      <div
        className="c5 c6 "
        color="palette.red500"
        size="1rem"
      >
        <svg
          fill="currentColor"
          height="100%"
          viewBox="0 0 22 19"
          width="100%"
        >
          <title>
            Warning
          </title>
          <path
            d="M0 19h22L11 0 0 19zm12-3h-2v-2h2v2zm0-4h-2V8h2v4z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  >
    <div
      className="c8 c9"
    >
      validation Message
    </div>
  </div>
</div>
`;

exports[`A FieldTextArea with validationMessage and with default label 1`] = `
.c5 {
  color: #CC1F36;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c11 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  border-color: #ED3B53;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 textarea:hover {
  border-color: #CC1F36;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c9 {
  font-size: 0.75rem;
  color: #CC1F36;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c13 {
  width: 13rem;
}

.c0 .c14 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c15 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

.c12 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c12 .c7 {
  grid-area: messages;
}

.c12 .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
  width: 150px;
}

.c12 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
  >
    hello
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea
        placeholder="placeholder"
      />
      <div
        className="c5 c6 "
        color="palette.red500"
        size="1rem"
      >
        <svg
          fill="currentColor"
          height="100%"
          viewBox="0 0 22 19"
          width="100%"
        >
          <title>
            Warning
          </title>
          <path
            d="M0 19h22L11 0 0 19zm12-3h-2v-2h2v2zm0-4h-2V8h2v4z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  >
    <div
      className="c8 c9"
    >
      validation Message
    </div>
  </div>
</div>
`;
